added header to index page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 
 <body>
     <div class="container">
+        <!---Adding the header, which includes the logo, nav bar, and an image -->
+            <header> 
+                 <!---Adding logo-->
+                 <a href= "/index.html"><img src="/img/lambda-black.png" alt="Lambda logo"></a>
+                 
+                 <!---Nav bar-->
+                    <nav>
+                        <a>Home</a>
+                        <!---Linking to the About page-->
+                        <a href= "about.html">About</a>
+                        <a>Products</a>
+                        <a>Blog</a>
+                        <a>Contact</a>
+                    </nav>
+            </header>
    
+
+
         <section class="top-content">
             <div class="text-container">
                 <h2>The Future</h2>
