Added header image

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
                         <a>Contact</a>
                     </nav>
             </header>
+        
+        <!---Adding image outside of the header section so it more beautifully aligns -->
+        <img class= "header-img" src="/img/jumbo.jpg" alt="Cars speeding down a highway at night">
    
 
 
