--- a/about.html
+++ b/about.html
@@ -13,6 +13,24 @@
 
 <body>
     <div class="container about-page">
+      <!---Adding the header, which includes the logo, nav bar, and an image -->
+      <header> 
+          <!---Adding logo-->
+          <a href= "/index.html"><img src="/img/lambda-black.png" alt="Lambda logo"></a>
+          
+          <!---Nav bar-->
+             <nav>
+                 <a>Home</a>
+                 <!---Linking to the About page-->
+                 <a href= "about.html">About</a>
+                 <a>Products</a>
+                 <a>Blog</a>
+                 <a>Contact</a>
+             </nav>
+     </header>
+
+     <!---Adding image outside of the header section so it more beautifully aligns, swapping in right one for about -->
+    <img class= "header-img" src="/img/jumbo-about.png" alt="Cars speeding down a highway at night">
      
     About
 
