--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                  
                  <!---Nav bar-->
                     <nav>
-                        <a>Home</a>
+                        <!---Linking back to Index-->
+                        <a href= "index.html">Home</a>
                         <!---Linking to the About page-->
                         <a href= "about.html">About</a>
                         <a>Products</a>
