Added top content to about page

--- a/about.html
+++ b/about.html
@@ -33,9 +33,14 @@
      <!---Adding image outside of the header section so it more beautifully aligns, swapping in right one for about -->
     <img class= "header-img" src="/img/jumbo-about.png" alt="Cars speeding down a highway at night">
      
-    About
-
-    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
+    <!---Adding top-content section; keeping same class names as index page because styling is similar-->
+    <section class= "top-content">
+        <!---Creating a class for text, like on index page --> 
+        <div class="about-top-text">
+            <h2>About</h2>
+            <p>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.</p>
+        </div>
+    </section>
 
 
     <img src="img/about-plan.png" alt="strategy">
