--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container about-page">
-      <!---Adding the header, which includes the logo, nav bar, and an image -->
+      <!---Adding the header, which includes the logo and nav bar -->
       <header> 
           <!---Adding logo-->
           <a href= "/index.html"><img src="/img/lambda-black.png" alt="Lambda logo"></a>
@@ -24,7 +24,7 @@
                 <a href= "index.html">Home</a>
                  <!---Linking to the About page-->
                  <a href= "about.html">About</a>
-                 <a>Products</a>
+                 <a href= "products.html">Products</a>
                  <a>Blog</a>
                  <a>Contact</a>
              </nav>
