Added image for Products page

--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
        </header>
 
     <!---Adding image outside of the header section so it more beautifully aligns, swapping in right one for about -->
-    <img class= "" src="" alt="Stock imagery will go here soon">
+    <img class= "header-img" src="/img/products-jumbo.jpg" alt="Stock imagery will go here soon">
 
     <!---Keeping the same containers as About because will be similar -->
     <section class= "top-content">
