Added same footer as all pages

--- a/products.html
+++ b/products.html
@@ -43,7 +43,17 @@
         </div>
     </section>
 
+    <!---Adding same footer, keeping styling same on all pages -->
+    <footer>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="products.html">Products</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </footer>
 
-    </div>
+    </div> <!-- container -->      
 
 </body> 
