--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                  <a href= "about.html">About</a>
                  <a href= "products.html">Products</a>
                  <a>Blog</a>
-                 <a>Contact</a>
+                 <a href= "contact.html">Contact</a>
              </nav>
      </header>
 
@@ -107,7 +107,7 @@
           <a href="about.html">About</a>
           <a href="products.html">Products</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href= "contact.html">Contact</a>
         </nav>
       </footer>
     </div><!-- container -->        
