--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
                    <a href= "about.html">About</a>
                    <a href= "products.html">Products</a>
                    <a>Blog</a>
-                   <a>Contact</a>
+                   <a href= "contact.html">Contact</a>
                </nav>
        </header>
 
@@ -87,7 +87,7 @@
           <a href="about.html">About</a>
           <a href="products.html">Products</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href= "contact.html">Contact</a>
         </nav>
       </footer>
 
