Updated some imagery including alt text

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
      </header>
 
      <!---Adding image outside of the header section so it more beautifully aligns, swapping in right one for about -->
-    <img class= "header-img" src="/img/jumbo-about.png" alt="Cars speeding down a highway at night">
+    <img class= "header-img" src="/img/jumbo-about.png" alt="Cityscape">
      
     <!---Adding top-content section; keeping same class names as index page because styling is similar-->
     <section class= "top-content">
