--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
            </header>
 
            <!---Adding image outside of the header section so it more beautifully aligns -->
-            <img class= "header-img" src="/img/jumbo.jpg" alt="Cars speeding down a highway at night">
+            <img class= "header-img" src="/img/contact.jpg" alt="Top of a typewriter">
    
             <!---Keeping same format as Index page-->
             <section class="top-content">
