--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
        </header>
 
     <!---Adding image outside of the header section so it more beautifully aligns, swapping in right one for about -->
-    <img class= "header-img" src="/img/products-jumbo.jpg" alt="Stock imagery will go here soon">
+    <img class= "header-img" src="/img/products-jumbo.jpg" alt="Cityscape imagery">
 
     <!---Keeping the same containers as About because will be similar -->
     <section class= "top-content">
@@ -54,7 +54,7 @@
       </div>
 
       <div class= "product-box">
-          <img class= "product-img" src= "img/product2.jpg" alt= "Laptop on a desk with orchid">
+          <img class= "product-img" src= "img/product2.jpg" alt= "Open office space">
         <div class= "product-text">
             <h2>Product 2</h2>
             <p>This product-y product is another one of our highlights. We do so much business-y business! Ask us about our digital solutions. We also have analog solutions!</p>
@@ -69,7 +69,7 @@
     
         </div>
     
-        <img class= "product-img" src= "img/product3.jpg" alt= "Laptop on a desk with orchid">
+        <img class= "product-img" src= "img/product3.jpg" alt= "Calculator coffee and succulent">
       </div>
     </section>
 
